Fix welcome-text position on small screen

--- a/css/_index.scss
+++ b/css/_index.scss
@@ -90,7 +90,6 @@
     }
     &__texts{
         align-self: center;
-        height: 30%;
         align-content: center;
         flex-basis: 50vw;
         .text-header{
