--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,6 @@
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  height: 30%;
   -ms-flex-line-pack: center;
       align-content: center;
   -ms-flex-preferred-size: 50vw;
